--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,5 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <div id="root"></div>
+    <script src="http://localhost:5000/dist/bundle.js"></script>
   </body>
 </html>
