--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>BetterCV</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>BetterCV</h1>
     <div id="root"></div>
     <script src="http://localhost:5000/dist/bundle.js"></script>
   </body>
