react rendered in prod

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>BetterCV</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>BetterCV</h1>
-    <div id="root"></div>
-    <script src="http://localhost:5000/dist/bundle.js"></script>
-  </body>
+
+<head>
+  <title>BetterCV</title>
+  <link rel='stylesheet' href='public/stylesheets/style.css' />
+</head>
+
+<body>
+  <h1>BetterCV</h1>
+  <div id="root"></div>
+  <script src="<%-domain%>dist/bundle.js"></script>
+</body>
+
 </html>
