bootstrap landing page added

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -4,4 +4,6 @@
 
 @import "tailwindcss/utilities";
 
-@import "components/index.scss"
+@import "components/index.scss";
+
+@import "site/new-age.scss";
