--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,12 +3,37 @@
 
 <head>
   <title>BetterCV</title>
-  <link rel='stylesheet' href='public/stylesheets/style.css' />
+
+  <!-- Bootstrap core CSS -->
+  <link href="public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="public/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="public/simple-line-icons/css/simple-line-icons.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+
+  <!-- Plugin CSS -->
+  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+
+  <!-- Custom styles for this template -->
+  <link href="css/new-age.min.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
   <script src="<%-domain%>dist/bundle.js"></script>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="public/jquery/jquery.min.js"></script>
+  <script src="public/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="public/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/new-age.min.js"></script>
 </body>
 
 </html>
