--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,15 @@
 <head>
   <title>BetterCV</title>
 
+  <link rel="shortcut icon" href="https://bettercv.s3.us-east-2.amazonaws.com/static/images/betterapps-logo.png"
+    type="image/x-icon">
+  </link>
+  <link rel="icon" href="https://bettercv.s3.us-east-2.amazonaws.com/static/images/betterapps-logo.png"
+    type="image/x-icon">
+  </link>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Create Resume in single shot">
+  <meta name="keywords" content="resume, cv, create resume">
   <!-- Bootstrap core CSS -->
   <link href="public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
